adicionando conexão com mysql, ajuste fetch das lista do produto como Eager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,8 @@
-# datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-spring.datasource.password=
+# Spring
+spring.profiles.active=dev
 
-# BD H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# jpa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+# JPA
+spring.jpa.open-in-view=false
 
 # jwt
 mercadolivre.jwt.expiration=8640000
