--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
     </dependencies>
 
     <build>
+        <finalName>mercadolivre</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
