--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/mercado_livre?createDatabaseIfNotExist=true
+spring.datasource.url=${SPRING_DATASOURCE_URL} 
+# jdbc:mysql://127.0.0.1:3306/mercado_livre?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
